--- a/public/commons_only_si.rb.html
+++ b/public/commons_only_si.rb.html
@@ -8,7 +8,7 @@
       body {
         max-width: 40rem;
         margin: auto;
-        padding: 1rem;
+        padding: 2rem 1rem;
         font-family: 'Helvetica Neue','Helvetica', system-ui;
         color: black;
         background-color: white;
@@ -21,59 +21,61 @@
       code pre {white-space: pre-wrap; word-break: break-word;}
       code:hover {color:black;}
       h1, h2 {font-weight:normal;}
-      a.githubline {text-decoration:none;color:gray;font-weight:bold;}
+      a {text-decoration:none;}
+      a.githubline {color:gray;font-weight:bold;}
       @media (prefers-color-scheme: dark) {
 body {color:white;background-color:black;}
+a {text-decoration:underline;color:white;}
 }
     </style>
     <title>app/controllers/calculations/commons_only_si.rb</title>
   </head>
-  <body><code title='Line 1, app/controllers/calculations/commons_only_si.rb'><pre><a name='1'  class='githubline' href='https://github.com/fantasticlife/egg-timer/tree/master/app/controllers/calculations/commons_only_si.rb#L1'> 1</a> module CALCULATION_COMMONS_ONLY_SI
+  <body><p><a href="/">parliament-calendar.herokuapp.com</a></p><code title='Line 1, app/controllers/calculations/commons_only_si.rb'><pre><a name='1'  class='githubline' href='https://github.com/fantasticlife/egg-timer/tree/master/app/controllers/calculations/commons_only_si.rb#L1'> 1</a> module CALCULATION_COMMONS_ONLY_SI
 </pre></code><h1>A method for calculating the end date of a scrutiny period, based on days on which the House of Commons must be sitting or on a short adjournment. This method is used for Commons only negative and made affirmative Statutory Instruments.</h1>
 <p>The calculation counts in actual sitting days, requiring the start date and the number of days to count.</p>
 <p>The calculation is defined by paragraphs 1 and 2 of <a href="https://www.legislation.gov.uk/ukpga/Geo6/9-10/36/section/7">Section 7 of the Statutory Instruments Act 1946</a>, though a different calculation may be required if the instrument is laid under another Act - as per <a href="https://www.legislation.gov.uk/ukpga/Geo6/9-10/36/section/7#section-7-3">paragraph 3</a>.</p>
-<code title='Line 7, app/controllers/calculations/commons_only_si.rb'><pre><a name='7'  class='githubline' href='https://github.com/fantasticlife/egg-timer/tree/master/app/controllers/calculations/commons_only_si.rb#L7'> 7</a>   def commons_only_si_calculation( date, target_day_count )
+<code title='Line 6, app/controllers/calculations/commons_only_si.rb'><pre><a name='6'  class='githubline' href='https://github.com/fantasticlife/egg-timer/tree/master/app/controllers/calculations/commons_only_si.rb#L6'> 6</a>   def commons_only_si_calculation(date, target_day_count)
 </pre></code><h2>We start counting on the <strong>first day the House of Commons has a scrutiny day</strong>.</h2>
-<p>This will be the day on which the instrument was laid, if that day is a scrutiny day.</p>
-<p>For made affirmative instruments, this is defined by the <a href="https://www.legislation.gov.uk/ukpga/Geo6/9-10/36/section/5#section-5-1">Statutory Instruments Act 1946 Section 5 paragraph 1</a>.</p>
-<p>For draft instruments, this is defined by the <a href="https://www.legislation.gov.uk/ukpga/Geo6/9-10/36/section/6#section-6-1">Statutory Instruments Act 1946 Section 6 paragraph 1</a>.</p>
-<p>If the laying day is a House of Commons scrutiny day we don&#39;t have to cycle through the calendar to find a subsequent one ...</p>
-<code title='Line 14, app/controllers/calculations/commons_only_si.rb'><pre><a name='14'  class='githubline' href='https://github.com/fantasticlife/egg-timer/tree/master/app/controllers/calculations/commons_only_si.rb#L14'> 14</a>     if date.is_commons_scrutiny_day?
-</pre></code><p>... and the laying day is the start of the scrutiny period.</p>
-<code title='Line 17, app/controllers/calculations/commons_only_si.rb'><pre><a name='17'  class='githubline' href='https://github.com/fantasticlife/egg-timer/tree/master/app/controllers/calculations/commons_only_si.rb#L17'> 17</a>       @scrutiny_start_date = date
-</pre></code><p>Otherwise, the laying day is not a House of Commons scrutiny day, then ...</p>
-<code title='Line 20, app/controllers/calculations/commons_only_si.rb'><pre><a name='20'  class='githubline' href='https://github.com/fantasticlife/egg-timer/tree/master/app/controllers/calculations/commons_only_si.rb#L20'> 20</a>     else
+<p>For draft instruments this will be the day on which the instrument was laid, if that day was a scrutiny day. This is defined by the <a href="https://www.legislation.gov.uk/ukpga/Geo6/9-10/36/section/6#section-6-1">Statutory Instruments Act 1946 Section 6 paragraph 1</a>.</p>
+<p>For made affirmative instruments this will be the day on which the instrument was made, if that day was a scrutiny day. This is defined by the <a href="https://www.legislation.gov.uk/ukpga/Geo6/9-10/36/section/5#section-5-1">Statutory Instruments Act 1946 Section 5 paragraph 1</a>.</p>
+<p>If the laying day - or making day for a made instrument - is a House of Commons scrutiny day we don&#39;t have to cycle through the calendar to find a subsequent one ...</p>
+<code title='Line 11, app/controllers/calculations/commons_only_si.rb'><pre><a name='11'  class='githubline' href='https://github.com/fantasticlife/egg-timer/tree/master/app/controllers/calculations/commons_only_si.rb#L11'> 11</a>     if date.is_commons_scrutiny_day?
+</pre></code><p>... and the laying or making day is the start of the scrutiny period.</p>
+<code title='Line 14, app/controllers/calculations/commons_only_si.rb'><pre><a name='14'  class='githubline' href='https://github.com/fantasticlife/egg-timer/tree/master/app/controllers/calculations/commons_only_si.rb#L14'> 14</a>       @scrutiny_start_date = date
+</pre></code><p>Otherwise, the laying or making day is not a House of Commons scrutiny day, then ...</p>
+<code title='Line 17, app/controllers/calculations/commons_only_si.rb'><pre><a name='17'  class='githubline' href='https://github.com/fantasticlife/egg-timer/tree/master/app/controllers/calculations/commons_only_si.rb#L17'> 17</a>     else
 </pre></code><p>... if there is a future House of Commons scrutiny day ...</p>
-<code title='Line 23, app/controllers/calculations/commons_only_si.rb'><pre><a name='23'  class='githubline' href='https://github.com/fantasticlife/egg-timer/tree/master/app/controllers/calculations/commons_only_si.rb#L23'> 23</a>       if date.first_commons_scrutiny_day 
+<code title='Line 20, app/controllers/calculations/commons_only_si.rb'><pre><a name='20'  class='githubline' href='https://github.com/fantasticlife/egg-timer/tree/master/app/controllers/calculations/commons_only_si.rb#L20'> 20</a>       if date.first_commons_scrutiny_day
 </pre></code><p>... we set the date to that day. In practice this will be the first sitting day following the laying.</p>
-<code title='Line 26, app/controllers/calculations/commons_only_si.rb'><pre><a name='26'  class='githubline' href='https://github.com/fantasticlife/egg-timer/tree/master/app/controllers/calculations/commons_only_si.rb#L26'> 26</a>         date = date.first_commons_scrutiny_day
+<code title='Line 23, app/controllers/calculations/commons_only_si.rb'><pre><a name='23'  class='githubline' href='https://github.com/fantasticlife/egg-timer/tree/master/app/controllers/calculations/commons_only_si.rb#L23'> 23</a>         date = date.first_commons_scrutiny_day
 </pre></code><p>... we have found the start of the scrutiny period.</p>
-<code title='Line 29, app/controllers/calculations/commons_only_si.rb'><pre><a name='29'  class='githubline' href='https://github.com/fantasticlife/egg-timer/tree/master/app/controllers/calculations/commons_only_si.rb#L29'> 29</a>         @scrutiny_start_date = date
+<code title='Line 26, app/controllers/calculations/commons_only_si.rb'><pre><a name='26'  class='githubline' href='https://github.com/fantasticlife/egg-timer/tree/master/app/controllers/calculations/commons_only_si.rb#L26'> 26</a>         @scrutiny_start_date = date
 </pre></code><p>If we didn&#39;t find a <strong>future House of Commons scrutiny day</strong> in our calendar, we can&#39;t calculate the scrutiny period, ...</p>
-<code title='Line 32, app/controllers/calculations/commons_only_si.rb'><pre><a name='32'  class='githubline' href='https://github.com/fantasticlife/egg-timer/tree/master/app/controllers/calculations/commons_only_si.rb#L32'> 32</a>       else
+<code title='Line 29, app/controllers/calculations/commons_only_si.rb'><pre><a name='29'  class='githubline' href='https://github.com/fantasticlife/egg-timer/tree/master/app/controllers/calculations/commons_only_si.rb#L29'> 29</a>       else
 </pre></code><p>... this error message is displayed ...</p>
-<code title='Line 35, app/controllers/calculations/commons_only_si.rb'><pre><a name='35'  class='githubline' href='https://github.com/fantasticlife/egg-timer/tree/master/app/controllers/calculations/commons_only_si.rb#L35'> 35</a>         @error_message = "Unable to find a future House of Commons sitting day. It's not currently possible to calculate an anticipated end date, as the likely end date occurs during a period for which sitting days are yet to be announced."
+<code title='Line 32, app/controllers/calculations/commons_only_si.rb'><pre><a name='32'  class='githubline' href='https://github.com/fantasticlife/egg-timer/tree/master/app/controllers/calculations/commons_only_si.rb#L32'> 32</a>         @error_message = "Unable to find a future House of Commons sitting day. It's not currently possible to calculate an anticipated end date, as the likely end date occurs during a period for which sitting days are yet to be announced."
 </pre></code><p>... and we stop looking for a scrutiny period end date.</p>
-<code title='Line 38, app/controllers/calculations/commons_only_si.rb'><pre><a name='38'  class='githubline' href='https://github.com/fantasticlife/egg-timer/tree/master/app/controllers/calculations/commons_only_si.rb#L38'> 38</a>         return
-</pre></code><code title='Line 39, app/controllers/calculations/commons_only_si.rb'><pre><a name='39'  class='githubline' href='https://github.com/fantasticlife/egg-timer/tree/master/app/controllers/calculations/commons_only_si.rb#L39'> 39</a>       end
-</pre></code><code title='Line 40, app/controllers/calculations/commons_only_si.rb'><pre><a name='40'  class='githubline' href='https://github.com/fantasticlife/egg-timer/tree/master/app/controllers/calculations/commons_only_si.rb#L40'> 40</a>     end
+<code title='Line 35, app/controllers/calculations/commons_only_si.rb'><pre><a name='35'  class='githubline' href='https://github.com/fantasticlife/egg-timer/tree/master/app/controllers/calculations/commons_only_si.rb#L35'> 35</a>         return
+</pre></code><code title='Line 36, app/controllers/calculations/commons_only_si.rb'><pre><a name='36'  class='githubline' href='https://github.com/fantasticlife/egg-timer/tree/master/app/controllers/calculations/commons_only_si.rb#L36'> 36</a>       end
+</pre></code><p>Otherwise, we&#39;ve established the laying day is a House of Commons scrutiny day so we don&#39;t have to cycle through the calendar to find a subsequent one ...</p>
+<code title='Line 41, app/controllers/calculations/commons_only_si.rb'><pre><a name='41'  class='githubline' href='https://github.com/fantasticlife/egg-timer/tree/master/app/controllers/calculations/commons_only_si.rb#L41'> 41</a>     end
 </pre></code><p>We&#39;ve found the first House of Commons scrutiny day so we start counting from day 1.</p>
-<code title='Line 43, app/controllers/calculations/commons_only_si.rb'><pre><a name='43'  class='githubline' href='https://github.com/fantasticlife/egg-timer/tree/master/app/controllers/calculations/commons_only_si.rb#L43'> 43</a>     day_count = 1
+<code title='Line 44, app/controllers/calculations/commons_only_si.rb'><pre><a name='44'  class='githubline' href='https://github.com/fantasticlife/egg-timer/tree/master/app/controllers/calculations/commons_only_si.rb#L44'> 44</a>     day_count = 1
 </pre></code><h2>Whilst the number of days we’re counting is less than the target number of days to count ...</h2>
-<code title='Line 46, app/controllers/calculations/commons_only_si.rb'><pre><a name='46'  class='githubline' href='https://github.com/fantasticlife/egg-timer/tree/master/app/controllers/calculations/commons_only_si.rb#L46'> 46</a>     while ( day_count < target_day_count ) do
+<code title='Line 47, app/controllers/calculations/commons_only_si.rb'><pre><a name='47'  class='githubline' href='https://github.com/fantasticlife/egg-timer/tree/master/app/controllers/calculations/commons_only_si.rb#L47'> 47</a>     while day_count < target_day_count
 </pre></code><p>... continue to the <strong>next day</strong>.</p>
-<code title='Line 49, app/controllers/calculations/commons_only_si.rb'><pre><a name='49'  class='githubline' href='https://github.com/fantasticlife/egg-timer/tree/master/app/controllers/calculations/commons_only_si.rb#L49'> 49</a>       date = date.next_day
+<code title='Line 50, app/controllers/calculations/commons_only_si.rb'><pre><a name='50'  class='githubline' href='https://github.com/fantasticlife/egg-timer/tree/master/app/controllers/calculations/commons_only_si.rb#L50'> 50</a>       date = date.next_day
 </pre></code><p>... and add 1 to the day count if this is a House of Commons scrutiny day.</p>
-<code title='Line 52, app/controllers/calculations/commons_only_si.rb'><pre><a name='52'  class='githubline' href='https://github.com/fantasticlife/egg-timer/tree/master/app/controllers/calculations/commons_only_si.rb#L52'> 52</a>       day_count +=1 if date.is_commons_scrutiny_day?
+<code title='Line 53, app/controllers/calculations/commons_only_si.rb'><pre><a name='53'  class='githubline' href='https://github.com/fantasticlife/egg-timer/tree/master/app/controllers/calculations/commons_only_si.rb#L53'> 53</a>       day_count += 1 if date.is_commons_scrutiny_day?
 </pre></code><p>... if the calendar has no record of what type of day this is, we can&#39;t calculate the end date, ...</p>
-<code title='Line 55, app/controllers/calculations/commons_only_si.rb'><pre><a name='55'  class='githubline' href='https://github.com/fantasticlife/egg-timer/tree/master/app/controllers/calculations/commons_only_si.rb#L55'> 55</a>       if date.is_calendar_not_populated?
+<code title='Line 56, app/controllers/calculations/commons_only_si.rb'><pre><a name='56'  class='githubline' href='https://github.com/fantasticlife/egg-timer/tree/master/app/controllers/calculations/commons_only_si.rb#L56'> 56</a>       next unless date.is_calendar_not_populated?
 </pre></code><p>... this error message is displayed to users ...</p>
-<code title='Line 58, app/controllers/calculations/commons_only_si.rb'><pre><a name='58'  class='githubline' href='https://github.com/fantasticlife/egg-timer/tree/master/app/controllers/calculations/commons_only_si.rb#L58'> 58</a>         @error_message = "It's not currently possible to calculate an anticipated end date, as the likely end date occurs during a period for which sitting days are yet to be announced."
+<code title='Line 59, app/controllers/calculations/commons_only_si.rb'><pre><a name='59'  class='githubline' href='https://github.com/fantasticlife/egg-timer/tree/master/app/controllers/calculations/commons_only_si.rb#L59'> 59</a>       @error_message = "It's not currently possible to calculate an anticipated end date, as the likely end date occurs during a period for which sitting days are yet to be announced."
 </pre></code><p>... and we stop looking through the calendar.</p>
-<code title='Line 61, app/controllers/calculations/commons_only_si.rb'><pre><a name='61'  class='githubline' href='https://github.com/fantasticlife/egg-timer/tree/master/app/controllers/calculations/commons_only_si.rb#L61'> 61</a>         break
-</pre></code><code title='Line 62, app/controllers/calculations/commons_only_si.rb'><pre><a name='62'  class='githubline' href='https://github.com/fantasticlife/egg-timer/tree/master/app/controllers/calculations/commons_only_si.rb#L62'> 62</a>       end
+<code title='Line 62, app/controllers/calculations/commons_only_si.rb'><pre><a name='62'  class='githubline' href='https://github.com/fantasticlife/egg-timer/tree/master/app/controllers/calculations/commons_only_si.rb#L62'> 62</a>       break
 </pre></code><code title='Line 63, app/controllers/calculations/commons_only_si.rb'><pre><a name='63'  class='githubline' href='https://github.com/fantasticlife/egg-timer/tree/master/app/controllers/calculations/commons_only_si.rb#L63'> 63</a>     end
 </pre></code><p>Return the anticipated end date of the scrutiny period for display.</p>
 <code title='Line 66, app/controllers/calculations/commons_only_si.rb'><pre><a name='66'  class='githubline' href='https://github.com/fantasticlife/egg-timer/tree/master/app/controllers/calculations/commons_only_si.rb#L66'> 66</a>     date
 </pre></code><code title='Line 67, app/controllers/calculations/commons_only_si.rb'><pre><a name='67'  class='githubline' href='https://github.com/fantasticlife/egg-timer/tree/master/app/controllers/calculations/commons_only_si.rb#L67'> 67</a>   end
-</pre></code><code title='Line 68, app/controllers/calculations/commons_only_si.rb'><pre><a name='68'  class='githubline' href='https://github.com/fantasticlife/egg-timer/tree/master/app/controllers/calculations/commons_only_si.rb#L68'> 68</a> end</pre></code></body></html>
+</pre></code><code title='Line 68, app/controllers/calculations/commons_only_si.rb'><pre><a name='68'  class='githubline' href='https://github.com/fantasticlife/egg-timer/tree/master/app/controllers/calculations/commons_only_si.rb#L68'> 68</a> end
+</pre></code></body></html>
